<?xml version="1.0" encoding="utf-8"?>
<TableLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


    <TableRow android:layout_width="match_parent" android:layout_height="match_parent" >
        <TextView android:id="@+id/resultTextView" android:textSize="32sp" android:layout_span="3" android:textAlignment="textEnd" />
    </TableRow>
    <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
        <Button android:text="1" android:id="@+id/button1" android:onClick="onButtonClicked"/>
        <Button android:text="2" android:id="@+id/button2" android:onClick="onButtonClicked"/>
        <Button android:text="3" android:id="@+id/button3" android:onClick="onButtonClicked"/>
    </TableRow>
    <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
        <Button android:text="4" android:id="@+id/button4" android:onClick="onButtonClicked"/>
        <Button android:text="5" android:id="@+id/button5" android:onClick="onButtonClicked"/>
        <Button android:text="6" android:id="@+id/button6" android:onClick="onButtonClicked"/>
    </TableRow>
    <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
        <Button android:text="7" android:id="@+id/button7" android:onClick="onButtonClicked"/>
        <Button android:text="8" android:id="@+id/button8" android:onClick="onButtonClicked"/>
        <Button android:text="9" android:id="@+id/button9" android:onClick="onButtonClicked"/>
    </TableRow>
    <TableRow android:layout_width="match_parent" android:layout_height="match_parent">
        <Button android:text="+" android:id="@+id/buttonPlus" android:onClick="onButtonClicked"/>
        <Button android:text="-" android:id="@+id/buttonMinus" android:onClick="onButtonClicked"/>
        <Button android:text="=" android:id="@+id/buttonEqual" android:onClick="onButtonClicked"/>
    </TableRow>
</TableLayout>
